# mc-rtc-superbuild

./: .cmake-format.py  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  install_mc-rtc.md  mc_rtc.cmake
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-entrypoint.sh  entrypoint.sh  setupShell.sh
.devcontainer/baseline-walking-controller-dev/: devcontainer.json
.devcontainer/cdadance-dev/: devcontainer.json
.devcontainer/cdadance-release/: devcontainer.json
.devcontainer/jammy/: devcontainer.cli.usb.json  devcontainer.json
.devcontainer/noble/: devcontainer.json
.devcontainer/resolute/: devcontainer.json
.devcontainer/ubuntu-22.04/: Dockerfile  devcontainer.json
.devcontainer/ubuntu-22.04/.devpod-internal/: Dockerfile-with-features  devcontainer-features.builtin.env
.devcontainer/ubuntu-22.04/.devpod-internal/0/: NOTES.md  README.md  devcontainer-feature.json  devcontainer-features-install.sh  devcontainer-features.env  install.sh
.devcontainer/ubuntu-24.04/: devcontainer.json
.github/.devcontainer/ubuntu-22.04/: Dockerfile  devcontainer.json
.github/devcontainer/: Dockerfile  build_superbuild.sh
.github/devcontainer/baseline-walking-controller-dev/: Dockerfile  devcontainter.json
.github/devcontainer/cdadance-dev/: Dockerfile
.github/devcontainer/cdadance-release/: Dockerfile  devcontainer.json
.github/devcontainer/choreonoid-docker/: Dockerfile  devcontainer.json  entrypoint.sh
.github/devcontainer/jammy/: Dockerfile  devcontainer.json
.github/devcontainer/noble/: Dockerfile  devcontainer.json
.github/devcontainer/resolute/: devcontainer.json
.github/devcontainer/ubuntu-22.04/: Dockerfile  devcontainer.json
.github/workflows/: baseline_walking_controller-ci.yaml  baseline_walking_controller-dispatch.yaml  bionic-ci.yml  build.yml  cdadance-dispatch.yaml  cdadance-release-dispatch.yaml  cdadanse-ci.yaml  ci.yml  devcontainer-ci-reusable.yaml  devcontainer-ci.yaml  dispatch-birobot-teleop.yaml  dispatch-hugo-polytope-controller.yaml  focal-ci.yml  jammy-ci.yml  jammy-devcontainer-ci.yml  macos-ci.yml  windows-ci.yml
cmake/: apt.cmake  command-prefix.cmake  detect-system.cmake  download.cmake  emscripten-dependencies.cmake  extensions.cmake  linux-dependencies.cmake  macos-dependencies.cmake  options.cmake  project.cmake  python.cmake  ros.cmake  setup-env.cmake  setup-source-monitor.cmake  setup_mc_rtc.in.sh  sources.cmake  sudo.cmake  win32-dependencies.cmake
cmake/emscripten/: emscripten.jam
cmake/linux/: bionic.cmake  bullseye.cmake  buster.cmake  focal.cmake  jammy.cmake  mc-rtc-mirror.cmake  noble.cmake  resolute.cmake  xenial.cmake
cmake/scripts/: catkin-configure-skiplist.cmake  clean-src-folders.cmake  cmake-with-prefix.cmake  git-submodule-init-update.cmake  init-catkin-workspace.cmake  link-compile-commands.cmake  link-source-and-build.cmake  source-monitor.cmake  uninstall-project.cmake  update-project.cmake
doc/: devcontainer.md
extensions/: .gitignore  CMakeLists.txt  local.cmake
extensions/my_first_controller/: CMakeLists.txt
extensions/my_first_controller/etc/: MyFirstController.in.yaml
extensions/my_first_controller/src/: MyFirstController.cpp  MyFirstController.h  api.h
projects/: spdlog.cmake
robots/: CMakeLists.txt  G1.cmake  Go1.cmake  Go2.cmake  H1.cmake  HC10DTP.cmake  HOAP3.cmake  HRP2.cmake  HRP4.cmake  HRP4CR.cmake  HRP4J.cmake  HRP5.cmake  Human.cmake  Kinova.cmake  Kuka.cmake  Miroki.cmake  NAO.cmake  Panda.cmake  Pepper.cmake  RHPS1.cmake  Revo2.cmake  Sawyer.cmake  Staubli.cmake  Talos.cmake  UniversalRobots.cmake  xArm.cmake
utils/: bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-ubuntu.sh
